# sage-api

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCH_REVIEW.md  Dockerfile  Makefile  README.md  docker-compose.yml  logging.conf  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  docker-publish.yml
agents/assistant/: AGENTS.md
agents/coder/: config.toml
agents/coder/agents/: explorer.md  implementer.md  orchestrator.md  reviewer.md
agents/coder/skills/architect-review/: SKILL.md
agents/coder/skills/clean-code/: SKILL.md
agents/coder/skills/codebase-conventions/: SKILL.md
agents/coder/skills/python-pro/: SKILL.md
agents/simple-assistant/: config.toml
agents/simple-assistant/agents/: simple-assistant.md
docs/plans/: 2026-03-02-enhanced-agents-endpoint-design.md  2026-03-02-enhanced-agents-endpoint-plan.md  2026-03-03-prometheus-telemetry-design.md  2026-03-03-prometheus-telemetry.md
k8s/: configmap.yaml  deployment.yaml  service.yaml
sage_api/: __init__.py  config.py  exceptions.py  logging.py  main.py  telemetry.py
sage_api/a2a/: __init__.py  agent_card.py  routes.py
sage_api/api/: agents.py  health.py  messages.py  sessions.py
sage_api/middleware/: auth.py  errors.py  logging.py  metrics.py  rate_limit.py
sage_api/models/: schemas.py
sage_api/services/: agent_registry.py  hot_reload.py  session_manager.py  session_store.py
tests/: conftest.py  test_a2a_agent_card.py  test_a2a_routes.py  test_agent_registry.py  test_api_agents.py  test_api_health.py  test_api_messages.py  test_api_sessions.py  test_auth.py  test_config.py  test_hot_reload.py  test_logging.py  test_main.py  test_middleware_errors.py  test_models.py  test_placeholder.py  test_rate_limit.py  test_session_manager.py  test_session_store.py  test_telemetry.py
