[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-api"
version = "0.1.0"
description = "FastAPI service wrapping the sage SDK"
authors = [
    {name = "Sage Choi", email = "sachoi@apollo.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "sage-agent>=1.4.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "redis[hiredis]>=5.0",
    "sse-starlette>=1.8.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "watchfiles>=0.21.0",
    "structlog>=24.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
    "httpx>=0.27",
    "fakeredis[json]>=2.20.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=4.5.1",
]

[project.optional-dependencies]

[tool.hatch.build.targets.wheel]
packages = ["sage_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=sage_api --cov-report=term-missing --cov-report=xml"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.mypy]
python_version = "3.10"
strict = true
